# pyCore-robot

./: .gitignore  LICENSE  README.md  assign-markers.py  calibration.py  draw_pose.py  get_pose.py  multiple_robot_MIMC-VADOC_control.py  pyproject.toml  sequence_movement.py  single_robot_MIMC-VADOC_control.py  ucorobot.py
examples/: calibrateExample.py  wifiExample.py
raw_code/: UDP_transmission.py  calibration.py  draw_pose.py  estructuramsg.json  single_robot_MIMC-VADOC_control.py  ucorobot.py
src/pycore-robot/: __init__.py
src/pycore-robot/examples/: wifiExample.py
src/pycore-robot/mobileRobot/: __init__.py
src/pycore-robot/wifiConection/: __init__.py  wifiConection.py
src/pycore_robot/: __init__.py
src/pycore_robot/examples/: wifiExample.py
src/pycore_robot/mobileRobot/: mobileRobot.py
src/pycore_robot/ucoRobot/: __init__.py  args.py  ucoRobot.py
src/pycore_robot/wifiConection/: wifiConection.py
tests/: .gitkeep  ejm1.py
