[project]
name = "pycore-robot"
version = "0.0.1"
authors = [
  { name="Epic Robotics", email="epic.robotics.bo@gmail.com" },
]
description = "Python based library for real implemented mobile robotics systems."
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Epic-Robotics/pyCore-robot"